service-nodeport/ingress-resource.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ing-backend-nginx
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: "35.239.240.85.nip.io"
    http:
      paths:
      - pathType: Prefix
        path: "/api/health"
        backend:
          service:
            name: backend
            port:
              number: 3333

---
# apiVersion: v1
# kind: Service
# metadata:
#   name: backend-nginx
# spec:
#   selector:
#     app: backend
#   ports:
#   - port: 3333
#     targetPort: 8080
