service-nodeport/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-LB
  namespace: preprod
  labels:
    app: backend
spec:
  type: LoadBalancer
  ports:
  - port: 3333
    targetPort: 3333
    protocol: TCP
    name: backend-port
  selector:
    app: backend

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ing
  namespace: preprod
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
  labels:
    app: backend
spec:
 rules:
  - host: nginx-backend.preprod.nursa.com
    http:
      paths:
      - path: /*
        pathType: ImplementationSpecific
        backend:
          service:
            name: backend
            port:
              number: 3333
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: backend
            port:
              number: 3333
